# actix-bincode

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  lib.rs  serde_compat.rs  tests.rs
src/compat/: mod.rs  tests.rs
tests/: bincode.rs  serde.rs
